# FastApi_miniShop

./: .gitignore  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_01_20_2138-073be37b1795_create_products_table.py  2024_01_21_0005-5b1a8f9348d6_create_users_table.py  2024_01_21_0100-d588f98bb92b_create_products_table.py  2024_01_21_0105-d391250e2e83_create_users_table.py  2024_01_21_0116-844fd60b804a_create_posts_table.py  2024_01_21_0140-eb35efe22ff4_created_relation.py  2024_01_21_1924-fdae717f6cd9_created_profile_table.py  2024_01_21_1930-dfe615d46039_created_profile_table.py  2024_01_26_1620-1cd08f0ee4bc_created_order_model.py  2024_01_26_1623-455216a68428_created_order_model.py  2024_01_27_1837-dc251278bf22_created_order_product_association_model.py  2024_01_27_1846-72ee32c47988_created_order_product_association_model.py  2024_01_31_2320-ca806aa1c7e2_added_count_column_to_order_product_.py  2024_02_01_1134-6a37c15276f3_added_unit_price_column_to_order_.py
api_v1/: __init__.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
